force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <description>Agreement between company and EERE</description>
    <label>Agreement</label>
    <nameField>
        <label>Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>