force-app/main/default/objects/Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account the Agreement is related to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>