force-app/main/default/objects/Agreement__c/fields/Contact_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Signed</label>
    <type>Checkbox</type>
</CustomField>