force-app/main/default/objects/Agreement__c/fields/Contact_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Contact_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that signed the agreement.</description>
    <label>Contact Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreement</relationshipLabel>
    <relationshipName>Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>