force-app/main/default/objects/Agreement__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person assigned to review the agreement</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>