force-app/main/default/objects/Agreement__c/fields/Reviewer_Signed__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewer Signed</label>
    <type>Checkbox</type>
</CustomField>