force-app/main/default/objects/Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Reviewer_Signed__c</columns>
    <columns>Contact_Signed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>